Adjust yaml for new version of ec-generate

--- a/native/linux_calc.yaml
+++ b/native/linux_calc.yaml
@@ -2,6 +2,7 @@
 name: LnxCalcItf
 pgmmodels:
   LINUX_CALC:
+    library: \eradaniConnect.native.config.objlib
     params:
       IBMICORES:
         type: Packed
